welcome page with login / register logic

--- a/src/app/component/navigation/navigation.component.html
+++ b/src/app/component/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span>Navigation here</span>
+      <span>Chirp</span>
     </mat-toolbar-row>
   
 
