--- a/src/app/component/posts/posts.component.html
+++ b/src/app/component/posts/posts.component.html
@@ -1,6 +1,6 @@
 <div class="super">
     <div class="sidenav">
-        right
+        <button (click)="logout()" id="login" mat-raised-button color="primary">Log Out</button>
     </div>
     <div class="content">
         <mat-grid-list class="new-post" cols="1" rowHeight="3:1" gutterSize="10">
