--- a/src/app/component/welcome/welcome.component.html
+++ b/src/app/component/welcome/welcome.component.html
@@ -1,7 +1,8 @@
 <div class="super">
     <div class="left">
         <div class="text">
-            <p>Welcome to chirp, the new social media. We guarantee no ads, no tracking, no selling your info to third party and complete data security.
+            <p>Welcome to chirp, the new social media. We guarantee no ads, no tracking, no selling your info to third
+                party and complete data security.
                 Start today, start chirping
             </p>
         </div>
@@ -10,6 +11,12 @@
             <button (click)="register()" id="signup" mat-stroked-button color="primary">Register</button>
         </div>
     </div>
-    <img src="/assets/img/logo.jpg" width="300" height="300">
+
+    <div class="right">
+        <div id="thoughtContainer">
+            <div class="thought">* Chirp chirp, hello frien ! *</div>
+        </div>
+        <img src="/assets/img/logo.jpg" width="350" height="300">
+    </div>
 
 </div>
