added rest lookup for posts

--- a/src/app/component/post-detail/post-detail.component.html
+++ b/src/app/component/post-detail/post-detail.component.html
@@ -1,7 +1,7 @@
 
       <div>
         <p>
-       {{post.text}}
+       {{post.content}}
       </p>
       <button mat-button>LIKE</button>
     </div>
