posts fix, username integration, design changes

--- a/src/app/component/post-detail/post-detail.component.css
+++ b/src/app/component/post-detail/post-detail.component.css
@@ -1,5 +1,13 @@
+#postContent{
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+}
 
-div{
-    width: 575px;
+#like{
+    margin-left: 1.5rem;
+}
+
+#content{
+    margin-left: 1.5rem;
 }
 
