--- a/src/app/component/post-detail/post-detail.component.html
+++ b/src/app/component/post-detail/post-detail.component.html
@@ -1,7 +1,8 @@
 
-      <div>
-        <p>
+      <div id="postContent">
+        <p id="username">{{post.user.username}} says:</p>
+        <p id="content">
        {{post.content}}
       </p>
-      <button mat-button>LIKE</button>
+      <button id="like" mat-button>LIKE</button>
     </div>
